--- a/18_mini-project/index.html
+++ b/18_mini-project/index.html
@@ -31,7 +31,7 @@
                <input type="number" class="form-control"name="note" id="note" max="20" min="0" step="0.25" placeholder="enrtrez votre note"/>
             </div>
             <div class="mb-3">
-                <button class="form-control btn btn-success" id="add">Ajouter</button>
+                <button class="form-control btn btn-primary" id="add">Ajouter</button>
             </div>
          </form>
             <h1>Listes des Stagiaire</h1>
